2005-01-18  Nobuo Yamashita  <nobsun@sampou.org>

	* src/kahua-spvr.scm, src/kahua-keyserv.scm, cgi/kahua.cgi.in:
	Modified log prefix from "~T ~P[~$]: " to "~Y ~T ~P[~$]: ".

2005-01-05  Kenji Hisazumi  <nel@soraneko.com>

	* cgi/kahua.cgi.in: 
	introduced <response> class to represent http response
	instead of response dispatcher

	See [kahua-dev:00848-00850] for detail.

2004-11-26  Shiro Kawai  <shiro@acm.org>

	* src/kahua/server.scm (default-element-handler): recognize
	  non-terminated HTML tags (e.g. img, br, etc) and emits empty
	  XHTML tag (e.g. <img />) instead of <img></img>.

2004-11-25  Shiro Kawai  <shiro@acm.org>

	* src/kahua-admin.scm: Enabled batch execution---just give an
	  admin command in the command line and it is executed immediately.
	  E.g. "kahua-admin restart kahua-web" etc.

	* src/kahua-spvr.scm (handle-http):
	  Added support of enctype multipart/form-data.  This enables file
	  uploading.  (NB: this requires Gauche 0.8.2 to work).
	* cgi/kahua.cgi.in : ditto.

2004-11-16  Nobuo Yamashita  <nobsun@sampou.org>

	* doc/Setup.ja: added some description for setting about unix group
	  and directory permissions.

2004-11-05  Shiro Kawai  <shiro@acm.org>

	* src/kahua-spvr.scm (run-server): fixed for the case if the platform
	  has both ipv4 and ipv6 interface.  httpd mode now opens and
	  listens for both interfaces.

2004-11-04  Nobuo Yamashita  <nobsun@sampou.org>

	* Release 0.3:
	- Added in-place mode for kahua-spvr (enable run in-place).
	- Added httpd mode for kahua-spvr (enable own httpd function).
	- Added API(kahua-context-ref*) for name having multiple values
	in a form.
	- Added interp-rss for issuing RSS
	- Added simple Query Language plugin for kahua.persistence
	

2004-11-04  Nobuo Yamashita  <nobsun@sampou.org>

	* doc/Scripts/kahua-spvr.ja : added description for --test option and
	for -H option of kahua-spvr

2004-10-31  Shiro Kawai  <shiro@acm.org>

	* test/spvr-httpd.scm.in : added for testing stand-alone httpd mode